@@ -631,18 +631,18 @@ AC_DEFUN(zsh_COMPILE_FLAGS,
     AC_ARG_ENABLE(cflags,
 	[  --enable-cflags=...        specify C compiler flags],
 	if test "$enableval" = "yes"
-	then CFLAGS="$1"
+	then CFLAGS="$2"
 	else CFLAGS="$enable_cflags"
 	fi)
     AC_ARG_ENABLE(ldflags,
 	[  --enable-ldflags=...       specify linker flags],
 	if test "$enableval" = "yes"
-	then LDFLAGS="$2"
+	then LDFLAGS="$3"
 	else LDFLAGS="$enable_ldflags"
 	fi)
     AC_ARG_ENABLE(libs,
 	[  --enable-libs=...          specify link libraries],
 	if test "$enableval" = "yes"
-	then LIBS="$3"
+	then LIBS="$4"
 	else LIBS="$enable_libs"
 	fi)])
