@@ -49,7 +49,7 @@ dnl Handle --program-prefix, --program-suffix, etc.
 zsh_ARG_PROGRAM
 
 dnl Handle setting of compile flags (CPPFLAGS, CFLAGS, LDFLAGS, LIBS).
-zsh_COMPILE_FLAGS
+zsh_COMPILE_FLAGS($CPPFLAGS, $CFLAGS, $LDFLAGS, $LIBS)
 
 dnl Do you want to debug zsh?
 undefine([zsh-debug])dnl
