@@ -1,3 +1,9 @@
+2000-08-13  Bart Schaefer  <schaefer@zsh.org>
+
+	* 12601: aczsh.m4, configure.in: configure --enable-cflags and the
+	like, i.e., with no =... part, should preserve the environment
+	values for CFLAGS etc. rather than erase them.
+
 2000-08-11  Peter Stephenson  <pws@csr.com>
 
 	* 12598: INSTALL, aczsh.m4, configure.in: --enable-cppflags=...,
